src/docusaurus/versioned_docs/version-2.3/setting-up-a-mentored-session.mdx
import SessionDetails from './media/create_session.png';
import SessionDetailsOptions from './media/createsession-options.png'
import NewSession from './media/newsession.png'
import EditAndDeleteSession from './media/edit-session.PNG'
import PortalSessionDetails from './media/portal-createsession.png'
import PortalSessionDetailsOptions from './media/portal-createsessionoptions.png'
import PortalNewSession from './media/portal-newsession.png'
import PortalEditAndDeleteSession from './media/portal-editsession.png'
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Admonition from '@theme/Admonition';

# Setting up a Session

You can create and manage mentoring sessions.

**To create a session, do as follows:**

<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<ol>
<li>On the Home page, go to the <b>Created sessions</b> tab.</li>
<li>Tap <b>Create session</b>.
<p>
    <img src={SessionDetails} />
</p>
</li>
<li>To update your profile picture, tap <b>Add image</b> and do one of the following actions:
    <ul>
    <li>To take a picture, select <b>Take Photo</b>.</li>
    <li>To upload an image, select <b>Choose from library</b>.</li>
    <li>To remove the existing image, select <b>Remove current photo</b>.</li>
    </ul>
</li>
<li>Enter the session information in the <b>Session title</b> and <b>Description</b> box.</li>
<li>To schedule a session, do as follows:
    <ol>
    <li>Tap the <b>Start date</b> or <b>End date</b> box.</li>
    <li>Select the date and time from the menu and tap <b>Set</b>.</li>
    </ol>
<p>  
    <Admonition type="note">
    <p>The session duration should be at least 30 minutes.</p>
    </Admonition>
</p>
</li>
<li>Select an option from the following boxes:
    <ul>
    <li><b>Recommended for</b></li>
    <li><b>Categories</b></li>
    <li><b>Medium</b></li>
    </ul>
<p>
    <Admonition type="tip">
    <ul>
    <li>To cancel the selection, tap the option again.</li>
    <li>To add a new option, do as follows:
        <ol>
        <li>Tap <b>+ Add</b> and enter the new option.</li>
        <li>Tap <b>Ok</b>.</li>
        </ol>
    </li>
    <li>To select all the options, turn on the toggle.</li>
    </ul>
    </Admonition>
</p>
<p>
    <img src={SessionDetailsOptions} />  
</p> 
</li>
<li>If you want to add a profile picture, tap <b>Add image</b>. Select <b>Take Photo</b> or <b>Choose from library</b>.</li>
<li>Tap <b>Publish</b>. The new session appears on the <b>Created sessions</b> tab of the Home page.
<p>
    <Admonition type="tip">
    <p>To create more sessions, tap <b>Create session</b> and repeat steps 1 to 5.</p>
    </Admonition>
</p>
<p>
    <img src={NewSession} />
</p>
</li>
</ol>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<ol>
<li>Go to the <b>Created sessions</b> tab.</li>
<li>Click the <b>Click here to create a new session</b> button.
<p>
    <img src={PortalSessionDetails} />
</p>
</li>
<li>To add a session image, click <b>Add image</b> and select the image.</li>
<li>Enter the session information in the <b>Session title</b> and <b>Description</b> box.</li>
<li>To schedule a session, do as follows:
    <ol>
    <li>Click the <b>Start date</b> or <b>End date</b> box.</li>
    <li>Select the date and time from the menu and click <b>Set</b>.</li>
    </ol>
<p> 
    <Admonition type="note">
    <ul>
    <li>The session duration should be at least 30 minutes.</li>
    <li>While setting the end time, set an extra time of at least 10 minutes to account for any delays during the session.</li>
    </ul>
    </Admonition>
</p>
</li>
<li>Select an option in the following boxes:
<ul>
<li><b>Recommended for</b></li>
<li><b>Categories</b></li>
<li><b>Medium</b></li>
</ul>
<p>
    <Admonition type="tip">
    <ul>
    <li>To cancel the selection, click the option again.</li>
    <li>To add a new option, do as follows:
        <ol>
        <li>Click <b>+ Add new</b> and enter the new option.</li>
        <li>Click <b>Ok</b>.</li>
        </ol>
    </li>
    <li>To select all the options, turn on the toggle.</li>
    </ul>
    </Admonition>
</p>
<p>
    <img src={PortalSessionDetailsOptions} />
</p>
</li>
<li>Click <b>Publish</b>. The new session appears on the Upcoming sessions section of the <b>Created sessions</b> tab.
<p>
    <Admonition type="tip">
    <p>To create more sessions, click the <b>Click here to create a new session</b> button and repeat steps 1 to 5.</p>
    </Admonition>
</p>
<p>
    <img src={PortalNewSession} />
</p>
</li>
</ol>
</TabItem>
</Tabs>

## Editing a Session

<Admonition type="note">
<p>If you want to edit the session details, you must do so at least 10 minutes before the start time.</p>
</Admonition>

<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<ol>
<li>To edit the session details, tap the session tile to view the Session Details page.</li>
<li>Tap <b>Edit</b>.
<p>
    <img src={EditAndDeleteSession} />
</p>
</li>
<li>Change the session details.</li>
<li>To update your profile picture, tap <b>Add image</b> and do one of the following actions:
    <ul>
    <li>To take a picture, select <b>Take Photo</b>.</li>
    <li>To upload an image, select <b>Choose from library</b>.</li>
    <li>To remove the existing image, select <b>Remove current photo</b>.</li>
    </ul>
</li>
<li>Tap <b>Publish</b>. The session details are updated.</li>
</ol>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<ol>
<li>Do one of the following actions: 
    <ul>
    <li>Click the session tile to view the Session Details page.</li>
    <li>Click the <b>View details</b> link to view the Session Details page.</li>
    </ul>
</li>
<li>Click <b>Edit session</b>.
<p>
    <img src={PortalEditAndDeleteSession} />
</p>
</li>
<li>Change the session details.</li>
<li>To update your profile picture, do any one of the following actions: 
<ul>
<li>Click <b>Add image</b> and select the image.</li>
<li>To remove an existing image, click <b>Remove image</b>.</li>
</ul>
</li> 
<li>Click <b>Publish</b>. The session details are updated.</li>
</ol>
</TabItem>
</Tabs>

## Deleting a Session

<Admonition type="note">
<p>If you want to delete the session, you must do so at least 10 minutes before the start time.</p>
</Admonition>

<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>To delete the session, tap the session tile and tap <b>Delete</b>. The session is cancelled and is removed from the <b>Created sessions</b> tab of the Home page.</p>
<p>
    <img src={EditAndDeleteSession} />
</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
    <p><b>To delete a session, do as follows:</b></p>
    <ol>
        <li>Do one of the following actions:
            <ul>
                <li>Click the session tile to view the Session details page.</li>
                <li>Click the <b>View details</b> link to view the Session details page.</li>
            </ul>
        </li>
        <li>Click <b>Delete session</b>.
        <p>
            <img src={PortalEditAndDeleteSession} />
        </p>
        </li>
        <li>Click <b>Yes, delete</b> on the confirmation dialog. The session is cancelled and is removed
        from the Upcoming sessions section of the <b>Created sessions</b> tab.</li>
    </ol>
</TabItem>
</Tabs>



