src/docusaurus/versioned_docs/version-2.4/setting-up-a-mentored-session.mdx
import SessionDetails from './media/create_session.png';
import SessionDetailsOptions from './media/createsession-options.png'
import AddMeetingLink from './media/addmeetinglink.png'
import NewSession from './media/newsession.png'
import EditAndDeleteSession from './media/edit-session.PNG'
import PortalSessionDetails from './media/portal-createsession.png'
import PortalSessionDetailsOptions from './media/portal-createsessionoptions.png'
import PortalAddMeetingLink from './media/portal-addmeetinglink.png'
import PortalNewSession from './media/portal-newsession.png'
import PortalEditAndDeleteSession from './media/portal-editsession.png'
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Admonition from '@theme/Admonition';

# Setting up a Session

You can create and manage mentoring sessions.

**To create a session, do as follows:**

<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<ol>
<li>On the Home page, go to the <b>Created sessions</b> tab.</li>
<li>Tap <b>Create session</b>.
<p>
    <img src={SessionDetails} />
</p>
</li>
<li>Optionally, to add a session image, tap <b>Add image</b> and do one of the following actions:
    <ul>
    <li>To take a picture, select <b>Take Photo</b>.</li>
    <li>To upload an image, select <b>Choose from library</b>.</li>
    </ul>
<p>  
    <Admonition type="tip">
    <p>Select an image that is relevant to the session topic.</p>
    </Admonition>
</p>
</li>
<li>Enter the session information in the <b>Session title</b> and <b>Description</b> boxes.</li>
<li>To schedule a session, do as follows:
    <ol>
    <li>Tap the <b>Start date</b> box and select the date and time from the date and time picker.</li>
    <li>Tap the <b>End date</b> box and select the date and time from the date and time picker.</li>
    <li>Tap <b>Set</b>.</li>
    </ol>
<p>  
    <Admonition type="note">
    <p>The session duration should be at least 30 minutes.</p>
    </Admonition>
</p>
</li>
<li>Select an option from the following boxes:
    <ul>
    <li><b>Recommended for</b></li>
    <li><b>Categories</b></li>
    <li><b>Medium</b></li>
    </ul>
<p>
    <Admonition type="tip">
    <ul>
    <li>To cancel the selection, tap the option again.</li>
    <li>To add a new option, do as follows:
        <ol>
        <li>Tap <b>+ Add</b> and enter the new option.</li>
        <li>Tap <b>Ok</b>.</li>
        </ol>
    </li>
    <li>To select all the options, turn on the toggle.</li>
    </ul>
    </Admonition>
</p>
<p>
    <img src={SessionDetailsOptions} />  
</p> 
</li>
<li>Tap <b>Publish and add link</b>. The session is published on the platform and participants can now view your session.
<p>
    <Admonition type="note">
    <p>You must set the meeting platform on the <b>Meeting Link</b> tab.</p>
    </Admonition>
</p>
<p>
    <img src={AddMeetingLink} />  
</p>
<p>
    <Admonition type="tip">
    <p>To go back and edit the session details, do as follows:</p>
    <ol>
    <li>Go to the <b>Edit session</b> tab.</li>
    <li>Make the necessary changes and tap <b>Save</b>.</li>
    </ol>
    </Admonition>
</p>
</li>
<li>On the <b>Meeting Link</b> tab, select a meeting platform from the <b>Add meeting link</b> menu.
    <p>
        <Admonition type="note">
        <p>If you haven't selected a meeting platform, <b>BigBlueButton</b> is set as the default platform.</p>
        </Admonition>
    </p>
<table>
  <tr>
    <th>Meeting Platform</th>
    <th>Meeting Information</th>
  </tr>
  <tr>
    <td>BigBlueButton</td>
    <td>No action required.</td>
  </tr>
  <tr>
    <td>Google Meet</td>
    <td>Copy and paste the call link in the <b>Meet link</b> box.</td>
  </tr>
  <tr>
    <td>WhatsApp</td>
    <td>Copy and paste the call link in the <b>WhatsApp</b> box.</td>
  </tr>
  <tr>
    <td>Zoom</td>
    <td>
    Do the following actions: 
    <ol>
        <li>Copy and paste the meeting link in the <b>Zoom link</b> box.</li>
        <li>Copy and paste the meeting ID in the <b>Meeting ID</b> box.</li>
        <li>Copy and paste the passcode in the <b>Passcode</b> box.</li>
    </ol>
    </td>
  </tr>
</table>
</li>
<li>Tap <b>Submit</b>. The meeting information is added.
<p>
    <Admonition type="tip">
    <ul>
    <li>You can find the new sessions on the <b>Created sessions</b> tab on the Home page.</li>
    <li>To create more sessions, click the <b>Click here to create a new session</b> button and repeat steps 1 to 10.</li>
    <li>You can also find your completed sessions in the Past Sessions section of the <b>Created sessions</b> tab.</li>
    </ul>
    </Admonition>
</p>
</li>
</ol>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<ol>
<li>Go to the <b>Created sessions</b> tab.</li>
<li>Click the <b>Click here to create a new session</b> button.
<p>
    <img src={PortalSessionDetails} />
</p>
</li>
<li>Optionally, to add a session image, click <b>Add image</b> and select the image.
<p>  
    <Admonition type="tip">
    <p>Select an image that is relevant to the session topic.</p>
    </Admonition>
</p>
</li>
<li>Enter the session information in the <b>Session title</b> and <b>Description</b> boxes.</li>
<li>To schedule a session, do as follows:
    <ol>
    <li>Click the <b>Start date</b> box and select the date and time from the date and time picker.</li>
    <li>Click the <b>End date</b> box and select the date and time from the date and time picker.</li>
    <li>Click <b>Set</b>.</li>
    </ol>
<p> 
    <Admonition type="note">
    <ul>
    <li>The session duration should be at least 30 minutes.</li>
    <li>While setting the end time, set an extra time of at least 10 minutes to account for any delays during the session.</li>
    </ul>
    </Admonition>
</p>
</li>
<li>Select an option in the following boxes:
<ul>
<li><b>Recommended for</b></li>
<li><b>Categories</b></li>
<li><b>Medium</b></li>
</ul>
<p>
    <Admonition type="tip">
    <ul>
    <li>To cancel the selection, click the option again.</li>
    <li>To add a new option, do as follows:
        <ol>
        <li>Click <b>+ Add new</b> and enter the new option.</li>
        <li>Click <b>Ok</b>.</li>
        </ol>
    </li>
    <li>To select all the options, turn on the toggle.</li>
    </ul>
    </Admonition>
</p>
<p>
    <img src={PortalSessionDetailsOptions} />
</p>
</li>
<li>Click <b>Publish and add link</b>. The session is published on the platform and participants can now view your session.
<p>
    <Admonition type="note">
    <p>You must set the meeting platform on the <b>Meeting Link</b> tab.</p>
    </Admonition>
</p>
<p>
    <img src={PortalAddMeetingLink} />  
</p>
<p>
    <Admonition type="tip">
    <p>To go back and edit the session details, do as follows:</p>
    <ol>
    <li>Go to the <b>Edit session</b> tab.</li>
    <li>Make the necessary changes and click <b>Save</b>.</li>
    </ol>
    </Admonition>
</p>
</li>
<li>On the <b>Meeting Link</b> tab, select a meeting platform from the <b>Add meeting link</b> menu.
    <p>
        <Admonition type="note">
        <p>If you haven't selected a meeting platform, <b>BigBlueButton</b> is set as the default platform.</p>
        </Admonition>
    </p>
<table>
  <tr>
    <th>Meeting Platform</th>
    <th>Meeting Information</th>
  </tr>
  <tr>
    <td>BigBlueButton</td>
    <td>No action required.</td>
  </tr>
  <tr>
    <td>Google Meet</td>
    <td>Copy and paste the call link in the <b>Meet link</b> box.</td>
  </tr>
  <tr>
    <td>WhatsApp</td>
    <td>Copy and paste the call link in the <b>WhatsApp</b> box.
    <p>
    <Admonition type="note">
    <p>If you select WhatsApp as the meeting platform, you can host the sessions only through the WhatsApp mobile application.</p>
    </Admonition>
    </p>
    </td>
  </tr>
  <tr>
    <td>Zoom</td>
    <td>
    Do the following actions:
    <ol> 
        <li>Copy and paste the meeting link in the <b>Zoom link</b> box.</li>
        <li>Copy and paste the meeting ID in the <b>Meeting ID</b> box.</li>
        <li>Copy and paste the passcode in the <b>Passcode</b> box.</li>
    </ol>
    </td>
  </tr>
</table>
</li>
<li>Click <b>Submit</b>. The meeting information is added.
<p>
    <Admonition type="tip">
    <ul>
    <li>You can find the new sessions on the <b>Created sessions</b> tab.</li>
    <li>To create more sessions, click the <b>Click here to create a new session</b> button and repeat steps 1 to 10.</li>
    <li>You can also find your completed sessions in the Past Sessions section of the <b>Created sessions</b> tab.</li>
    </ul>
    </Admonition>
</p>
<p>
    <img src={PortalNewSession} />
</p>
</li>
</ol>
</TabItem>
</Tabs>

## Editing a Session

<Admonition type="note">
<p>If you want to edit the session details, you must do so at least 10 minutes before the start time.</p>
</Admonition>

<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<ol>
<li>To edit the session details, tap the session tile to view the Session Details page.</li>
<li>Tap <b>Edit</b>. The Edit session details page appears.
<p>
    <img src={EditAndDeleteSession} />
</p>
</li>
</ol>
<h3>Editing the Session Details</h3>
<ol>
<li>On the Edit session details page, go to the <b>Edit session</b> tab.</li>
<li>Make the necessary changes to the session information.</li>
<li>Optionally, to update your session image, tap <b>Add image</b> and do one of the following actions:
    <ul>
    <li>To take a picture, select <b>Take Photo</b>.</li>
    <li>To upload an image, select <b>Choose from library</b>.</li>
    <li>To remove the existing image, select <b>Remove current photo</b>.</li>
    </ul>
<p>  
    <Admonition type="tip">
    <p>Select an image that is relevant to the session topic.</p>
    </Admonition>
</p>
</li>
<li>Tap <b>Save</b>. The session details are updated.</li>
</ol>
<h3>Editing the Meeting Information</h3>
<ol>
<li>On the Edit Session Details page, go to the <b>Meeting link</b> tab and make the necessary changes.</li>
<li>Tap <b>Save</b>. The meeting information is updated.</li>
</ol>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
<ol>
<li>Do one of the following actions: 
    <ul>
    <li>Click the session tile to view the Session Details page.</li>
    <li>Click the <b>View details</b> link to view the Session Details page.</li>
    </ul>
</li>
<li>Click <b>Edit session</b>.
<p>
    <img src={PortalEditAndDeleteSession} />
</p>
</li>
</ol>
<h3>Editing the Session Details</h3>
<ol>
<li>On the Edit session details page, go to the <b>Edit session</b> tab.</li>
<li>Change the session details.</li>
<li>Optionally, to update your session image, do one of the following actions:
    <ul>
    <li>Click <b>Add image</b> and select the new image.</li>
    <li>To remove the existing image, click <b>Remove image</b>.</li>
    </ul>
<p>  
    <Admonition type="tip">
    <p>Select an image that is relevant to the session topic.</p>
    </Admonition>
</p>
</li>
<li>Click <b>Save</b>. The session details are updated.</li>
</ol>
<h3>Editing the Meeting Information</h3>
<ol>
<li>On the Edit session details page, go to the <b>Meeting link</b> tab and make the necessary changes.</li>
<li>Click <b>Save</b>. The meeting information is updated.</li>
</ol>
</TabItem>
</Tabs>

## Deleting a Session

<Admonition type="note">
<p>If you want to delete the session, you must do so at least 10 minutes before the start time.</p>
</Admonition>

<Tabs>
<TabItem value="mentored mobile application" label="Mobile App" default>
<p>To delete the session, tap the session tile and tap <b>Delete</b>. The session is cancelled and is removed from the <b>Created sessions</b> tab of the Home page.</p>
<p>
    <img src={EditAndDeleteSession} />
</p>
</TabItem>
<TabItem value="mentored portal" label="Web Portal">
    <p><b>To delete a session, do as follows:</b></p>
    <ol>
        <li>Do one of the following actions:
            <ul>
                <li>Click the session tile to view the Session details page.</li>
                <li>Click the <b>View details</b> link to view the Session details page.</li>
            </ul>
        </li>
        <li>Click <b>Delete session</b>.
        <p>
            <img src={PortalEditAndDeleteSession} />
        </p>
        </li>
        <li>Click <b>Yes, delete</b> on the confirmation dialog. The session is cancelled and is removed
        from the Upcoming sessions section of the <b>Created sessions</b> tab.</li>
    </ol>
</TabItem>
</Tabs>



